# $Id$

2006-12-11
	* Close pop3/imap sockets.

2006-12-10
	* Fix peek table bug with new portmon code.

2006-12-09
	* Replaced hash module used by libtcp-portmon with GLib's GHashTable,
	due to licensing issue noted by Fedora Core packagers.
	* Eliminated config items: 
		min_port_monitors,
		min_port_monitor_connections
	* Added config item:
		max_port_monitor_connections

2006-11-30
	* Added $entropy_avail, $entropy_poolsize and $entropy_bar
	for the crypto freaks.  Idea suggested by Perttu Luukko
	<nuteater@users.sourceforge.net> in feature request 1497050.
	* Added max length specifier to audacious_title.  Closes
	feature request #1600631.

2006-11-28
	* Rearrange retry attempts in pop3 and imap code, removing sleep() 
	calls which cause the whole process to sleep, not just the thread.

2006-11-22
	* Added max_specials config item with default 512.  This should
	close bug #1574523 for real this time.  Thanks to John Harrigan
	<jfharrigan@fedex.com> for this one.

2006-11-21
	* Changed autotools for subversion versioning.
	* Updated svn ebuild for gentoo.
	* Documentation updates for clarity, i.e. close bug #1599041.

2006-11-20
	* fix compile error with --disable-xdamage when Xdamage.h not present.

2006-11-18
	* fix bug where present rate var was not being read from acpi battery
	state file: /proc/acpi/battery/%s/state.

2006-11-15
	* Change linkstatus display for use_spacer.  Closes bug #1577580.

2006-11-14
	* Fix compile error with --disable-x11.
	* Add new timed thread abstraction routines.
	* Convert thread activity to timed threads, including
	texeci, imap, pop3, audacious.
	* Change memory vars from unsigned long to unsigned long long
	to fix reported overflow, e.g. swapmax >= 4Gb.

2006-11-13
	* Use pthread_cond_timedwait() instead of sleep() in audacious
	thread.  Will convert all worker threads to this timing method.  

2006-11-12
	* Fix freebsd build error.
	* Minor changes to syntax files.
	* Conky 1.4.4 released.

2006-11-11