@@ -2,6 +2,7 @@
 
 2006-12-11
 	* Close pop3/imap sockets.
+	* Fix outstanding battery issues.
 
 2006-12-10
 	* Fix peek table bug with new portmon code.
